--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -557,55 +557,6 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
-        <div class="talktitle">What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">Webinar (19.8.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">60 min</div>
-        <div class="talktitle">Communities Today Chain Conversation</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">Chain Conversations (31.3.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">60 min</div>
-        <div class="talktitle">Fireside Chat on Scaling Your QA Ops</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">BrowserStack event (19.7.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">60 min</div>
-        <div class="talktitle">Fireside Chat with Maaret Pyhäjärvi</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">mabl Experience tour (23.3.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">60 min</div>
-        <div class="talktitle">Exploring the Exploratory with Maaret Pyhäjärvi</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">Ministry of Testing Bangalore (7.5.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">1 h</div>
-        <div class="talktitle">Panel on Breaking the Bias in Software Testing</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">STG Webinar (8.3.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">60 min</div>
-        <div class="talktitle">Creating Career Opportunities in Quality Engineering</div>
-        <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">45 min</div>
         <div class="talktitle">Continuous Delivery without Automation</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Agile Finland Continuous Deployment event, December 2nd 2014, Helsinki </div>
@@ -822,6 +773,55 @@
     </div>
 
     <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Webinar (19.8.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Communities Today Chain Conversation</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Chain Conversations (31.3.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Fireside Chat on Scaling Your QA Ops</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">BrowserStack event (19.7.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Fireside Chat with Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">mabl Experience tour (23.3.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Exploring the Exploratory with Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Ministry of Testing Bangalore (7.5.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1 h</div>
+        <div class="talktitle">Panel on Breaking the Bias in Software Testing</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">STG Webinar (8.3.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Creating Career Opportunities in Quality Engineering</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
+    </div>
+
+    <div class="card2">
         <div class="timecircle">1/2 day</div>
         <div class="status">NEW</div>
         <div class="talktitle">Social Software Testing Approaches</div>
@@ -836,6 +836,29 @@
         <div class="wherewhenwhere">TestBash, March 26th 2015, Brighton, UK</div>
         <div class="wherewhenwhere">Turku Agile Day, May 12th 2014, Turku, Finland </div>
         <div class="wherewhenwhere">Belgium Testing Days, March 17th & 18th & 19th 2014, Bruges, Belgium </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Exploratory Testing Essentials</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, SwedenEuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Context-Driven Testing</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">Customer Organization, March 2015, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Exploratory Testing - Explore with Intent</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
+        <div class="wherewhenwhere">STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)</div>
+        <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (28.9.2017)</div>
     </div>
 
 
@@ -941,6 +964,22 @@
 
             <div class="card3">
                 <div class="timecircle">1 day</div>
+                <div class="talktitle">Java Programming with the Intentional Method</div>
+                <div class="talktype">COURSE</div>
+                <div class="wherewhenwhere">Mimmit Koodaa, (7.4.2018) Helsinki, Finland</div>
+            </div>
+
+            <div class="card3">
+                <div class="timecircle">1 day</div>
+                <div class="talktitle">Ensemble Testing</div>
+                <div class="talktype">COURSE</div>
+                <div class="wherewhenwhere">Testing Portugal Conference 2017, Sofia, Bulgaria (27.11.2017)</div>
+                <div class="wherewhenwhere">Agile Testing Days 2017, Potsdam, Germany (13.11.2017)</div>
+                <div class="wherewhenwhere">SEETEST Conference 2017, Sofia, Bulgaria (27.9.2017)</div>
+            </div>
+
+            <div class="card3">
+                <div class="timecircle">1 day</div>
                 <div class="talktitle">Social Software Testing Approaches</div>
                 <div class="talktype">COURSE</div>
                 <div class="wherewhenwhere">Testing Assembly, (22.9.2022) Helsinki, Finland</div>
@@ -962,6 +1001,7 @@
         <div class="wherewhenwhere">Customer Organization, September 25th & 26th 2013, Helsinki, Finland</div>
         <div class="wherewhenwhere">Customer Organization, September 18th & 19th 2013, Helsinki, Finland</div>
         <div class="wherewhenwhere">IIR, May 2010, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer Organization,  (15-16.11.2018), Tampere, Finland</div>
     </div>
 
     <div class="card3">
@@ -1032,6 +1072,8 @@
         <div class="wherewhenwhere">IIR, October 8th & 9th 2008, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, March 24th & 25th 2009, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, May 27th & 28th 2009, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Urasilta, Jyväskylä, Finland (29-30.5.2017)</div>
+        <div class="wherewhenwhere">customer organization, Helsinki, Finland (3-4.4.2019)</div>
         <div class="wherewhenwhere">Customer Organization, August 18th & 19th 2009, Helsinki, Finland </div>
     </div>
 
@@ -1139,6 +1181,13 @@
             <a href="https://tivia.fi/event?tags=%5B9%5D">Tivia ry partners with Altom on making these courses available.</a></p>
     </div>
 
+    <div class="card2">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Diversifying Test Approaches using Constraints</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization, March 11th 2020, Helsinki, Finland</div>
+    </div>
+
     <div class="card3">
         <div class="timecircle">1 day</div>
         <div class="talktitle">Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code</div>
@@ -1156,7 +1205,7 @@
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2000, Helsinki, Finland </div>
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2001, Helsinki, Finland </div>
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2002, Helsinki, Finland </div>
-        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn ??, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2018, Helsinki, Finland </div>
         <p>This course is university course on testing and release management, advanced topics. Since I am no longer at university, I no longer teach this.</p>
 
     </div>
