--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -260,10 +260,15 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Learning through Osmosis</div>
+            <div class="talktitle">Learning (Programming) through Osmosis</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017)</div>
             <div class="wherewhenwhere">Agile Day Riga 2017, Riga, Latvia (7-8.7.2017) </div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Nordic Testing Days, Tallinn, Estonia (8.-9.6.2017)</div>
+            <div class="wherewhenwhere">Devoxx UK, London, UK (8.-10.6.2016)</div>
+            <a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&"><i class="fas fa-video"></i></a>
         </div>
 
         <div class="card2">
@@ -346,15 +351,6 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">7 min</div>
-            <div class="talktitle">Better Ideas at Test Design</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">TextFlix (23.10.2021), Online</div>
-            <a href="https://www.youtube.com/watch?v=zir0CWmJ8zc"><i class="fas fa-video"></i></a>
-            <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62"><i class="far fa-gem""></i></a>
         </div>
 
     <div class="card2">
@@ -444,6 +440,29 @@
         <div class="wherewhenwhere">Customer Organization (9.7.2021), Online</div>
         <a href="https://twitter.com/maaretp/status/1413440131495759874?s=20"><i class="far fa-gem"></i></a>
     </div>
+
+    <div class="card2">
+        <div class="timecircle">7 min</div>
+        <div class="talktitle">Better Ideas at Test Design</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TextFlix (23.10.2021), Online</div>
+        <a href="https://www.youtube.com/watch?v=zir0CWmJ8zc"><i class="fas fa-video"></i></a>
+        <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62"><i class="far fa-gem""></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Exploratory Testing - Explained and Experienced</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Quality Week Event, Online (1.11.2021)</div>
+        <div class="wherewhenwhere">SEETEST Conference 2017, Sofia, Bulgaria (28.-29.9.2017)</div>
+        <div class="wherewhenwhere">TIVI Ohjelmistotestaus 2017, Helsinki, Finland (16-17.5.2017)</div>
+        <div class="wherewhenwhere">ExpoQA Academy Day, Barcelona (25.1.2017)</div>
+        <div class="wherewhenwhere">TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)</div>
+        <div class="wherewhenwhere">Agile Serbia, Belgrade, Serbia (23.4.2016)</div>
+        <div class="wherewhenwhere">Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced"><i class="fab fa-slideshare"></i></a>
+        </div>
 
     <div class="card2">
         <div class="timecircle">7 min</div>
