Descriptions for categories

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -21,7 +21,8 @@
 
 <h1 class="header">Past talks, workshops and trainings</h1>
 
-<h2>Keynotes, Talks, Panels, Tutorials and Workshops</h2>
+<h2>Keynotes, Talks, and Panels</h2>
+<p>Keynotes are invited talks that generally speak for the whole conference and cater to widest variety of people in audiences. Talks can be for any audience. Panels are sessions where you prepare questions and perspectives, and try to present it with a group of people following energies of the audience, or at least a second person.</p>
 
 <section class="talks">
     <div class="box2">
@@ -352,94 +353,6 @@
             <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
         </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Workshop on Sprint Test Planning</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">maaretp Silver Jubilee (24.10.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Workshop on Exploratory Unit Testing</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Workshop on Test Automationist's Gambit</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">maaretp Silver Jubilee (25.10.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Workshop on Test Coverage</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Selenium Conference India/Virtual (29-30.7.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Getting Started with Test Automation in Python</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (16.1.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Mobile Test Automation with Appium</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (17.2.2022), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Exploratory Testing with a Constraint: Unconfirmed Issues</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Customer Organization (11.6.2021), Online</div>
-        <div class="wherewhenwhere">Exploratory Testing Academy (26.4.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Exploratory Testing with a Constraint: Test Automation</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Customer Organization (10.6.2021), Online</div>
-        <div class="wherewhenwhere">Exploratory Testing Academy (27.4.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Exploratory Testing with a Constraint: Self-Management</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Customer Organization (9.6.2021), Online</div>
-        <div class="wherewhenwhere">Exploratory Testing Academy (28.4.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Contemporary Exploratory Testing Ask Anyone Anything</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Exploratory Testing Academy (29.4.2021), Online</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">90 min</div>
-        <div class="talktitle">Software Testing Ask Anyone Anything</div>
-        <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Customer Organization (9.7.2021), Online</div>
-        <a href="https://twitter.com/maaretp/status/1413440131495759874?s=20"><i class="far fa-gem"></i></a>
-    </div>
 
     <div class="card2">
         <div class="timecircle">7 min</div>
@@ -840,46 +753,6 @@
         <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
     </div>
 
-    <div class="card2">
-        <div class="timecircle">1/2 day</div>
-        <div class="status">NEW</div>
-        <div class="talktitle">Social Software Testing Approaches</div>
-        <div class="talktype">TUTORIAL</div>
-        <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">1/2 day</div>
-        <div class="talktitle"> Test-Driven Development with Lego Robots</div>
-        <div class="talktype">TUTORIAL</div>
-        <div class="wherewhenwhere">TestBash, March 26th 2015, Brighton, UK</div>
-        <div class="wherewhenwhere">Turku Agile Day, May 12th 2014, Turku, Finland </div>
-        <div class="wherewhenwhere">Belgium Testing Days, March 17th & 18th & 19th 2014, Bruges, Belgium </div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">1/2 day</div>
-        <div class="talktitle">Exploratory Testing Essentials</div>
-        <div class="talktype">TUTORIAL</div>
-        <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, SwedenEuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">1/2 day</div>
-        <div class="talktitle">Context-Driven Testing</div>
-        <div class="talktype">TUTORIAL</div>
-        <div class="wherewhenwhere">Customer Organization, March 2015, Helsinki, Finland</div>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">1/2 day</div>
-        <div class="talktitle">Exploratory Testing - Explore with Intent</div>
-        <div class="talktype">TUTORIAL</div>
-        <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
-        <div class="wherewhenwhere">STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)</div>
-        <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (28.9.2017)</div>
-    </div>
-
 
 <!--
         <div class="card2">
@@ -898,10 +771,152 @@
     </div>
     </section>
 
-    <h2>Training Courses and Tutorials</h2>
+    <h2>Workshops and Tutorials</h2>
+
+    <p>Workshops are shorter sessions aimed at teaching one thing. Tutorials are scaled up trainings for conference purposes. While a training is usually limited to 12-16 people, a tutorial of same topic can run on 50+ people. It leaves it more broadcast of information than a skills transfer.</p>
+
+    <section class="workshops_tutorials">
+        <div class="box2">
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Workshop on Sprint Test Planning</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">maaretp Silver Jubilee (24.10.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Workshop on Exploratory Unit Testing</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Workshop on Test Automationist's Gambit</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">maaretp Silver Jubilee (25.10.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Workshop on Test Coverage</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Selenium Conference India/Virtual (29-30.7.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Getting Started with Test Automation in Python</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (16.1.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Mobile Test Automation with Appium</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (17.2.2022), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Exploratory Testing with a Constraint: Unconfirmed Issues</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Customer Organization (11.6.2021), Online</div>
+                <div class="wherewhenwhere">Exploratory Testing Academy (26.4.2021), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Exploratory Testing with a Constraint: Test Automation</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Customer Organization (10.6.2021), Online</div>
+                <div class="wherewhenwhere">Exploratory Testing Academy (27.4.2021), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Exploratory Testing with a Constraint: Self-Management</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Customer Organization (9.6.2021), Online</div>
+                <div class="wherewhenwhere">Exploratory Testing Academy (28.4.2021), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Contemporary Exploratory Testing Ask Anyone Anything</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Exploratory Testing Academy (29.4.2021), Online</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Software Testing Ask Anyone Anything</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Customer Organization (9.7.2021), Online</div>
+                <a href="https://twitter.com/maaretp/status/1413440131495759874?s=20"><i class="far fa-gem"></i></a>
+            </div>
+
+
+            <div class="card2">
+                <div class="timecircle">1/2 day</div>
+                <div class="status">NEW</div>
+                <div class="talktitle">Social Software Testing Approaches</div>
+                <div class="talktype">TUTORIAL</div>
+                <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">1/2 day</div>
+                <div class="talktitle"> Test-Driven Development with Lego Robots</div>
+                <div class="talktype">TUTORIAL</div>
+                <div class="wherewhenwhere">TestBash, March 26th 2015, Brighton, UK</div>
+                <div class="wherewhenwhere">Turku Agile Day, May 12th 2014, Turku, Finland </div>
+                <div class="wherewhenwhere">Belgium Testing Days, March 17th & 18th & 19th 2014, Bruges, Belgium </div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">1/2 day</div>
+                <div class="talktitle">Exploratory Testing Essentials</div>
+                <div class="talktype">TUTORIAL</div>
+                <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, SwedenEuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">1/2 day</div>
+                <div class="talktitle">Context-Driven Testing</div>
+                <div class="talktype">TUTORIAL</div>
+                <div class="wherewhenwhere">Customer Organization, March 2015, Helsinki, Finland</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">1/2 day</div>
+                <div class="talktitle">Exploratory Testing - Explore with Intent</div>
+                <div class="talktype">TUTORIAL</div>
+                <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
+                <div class="wherewhenwhere">STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)</div>
+                <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (28.9.2017)</div>
+            </div>
+
+            </div>
+
+    </section>
+
+    <h2>Training Courses</h2>
+
+    <p>Training course aim at solidifying knowledge and skills transfer to students, moving each student from where they are to better. Really great courses would run with same group over longer time, but in business training, we often start by budgeting 1/2 day to 2 days for a particular topic.</p>
 
     <section class="trainings">
-        <div class="box3">
+        <div class="box2">
 
             <div class="card3">
             <div class="timecircle">1 day</div>
