--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
     <p>I read my emails weekly. For faster response, use Linkedin.</p>
     <div class="social">
         <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
-        <a rel="me" href="https://mas.to/@maaretp" target="_blank" rel="noopener noreferrer me" title="Mastodon profile"><i class="fab fa-mastodon"></i></a>
+        <a rel="me" href="https://mas.to/@maaretp" target="_blank" rel="noopener noreferrer me" title="Mastodon - international"><i class="fab fa-mastodon"></i></a>
+        <a rel="me" href="https://tivia.social/@maaret" target="_blank" rel="noopener noreferrer me" title="Mastodon - suomeksi"><i class="fab fa-mastodon"></i></a>
         <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
         <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook page"><i class="fab fa-facebook-square"></i></a>
         <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile"><i class="fab fa-twitter-square"></i></a>
