Add start of classification to topics

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -37,8 +37,9 @@
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
-            <div class="talktype">KEYNOTE</div> 
+            <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
@@ -67,6 +68,8 @@
             <a href="https://www.slideshare.net/maaretp/lets-do-a-thing-and-call-it-foo"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
+            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
+
         </div>
 
         <div class="card2">
@@ -77,6 +80,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Event, November 10th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/axiomsummit-2022-a-practitioners-guide-to-contemporary-exploratory-testing"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ContemporaryExploratoryTesting</div>
         </div>
 
         <div class="card2">
@@ -91,6 +95,7 @@
             <div class="wherewhenwhere">SQA Point Meetup, October 28th 2021, Online</div>
             <div class="wherewhenwhere">Geekle QA Summit, February 16th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/eurostar-21-keynote-automationists-gambit"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ContemporaryExploratoryTesting</div>
         </div>
 
         <div class="card2">
@@ -121,6 +126,7 @@
             <div class="wherewhenwhere">Customer Organization (24.11.2021), Online</div>
             <div class="wherewhenwhere">Breakpoint (24.3.2021), Online</div>
             <a href="https://www.slideshare.net/maaretp/breakpoint-2021-contemporary-exploratorytesting"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ContemporaryExploratoryTesting</div>
         </div>
 
         <div class="card2">
@@ -270,6 +276,7 @@
             <div class="wherewhenwhere">Devoxx UK, London, UK (8.-10.6.2016)</div>
             <a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&"><i class="fas fa-video"></i></a>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         </div>
 
         <div class="card2">
@@ -288,6 +295,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">NewCrafts Conference, Paris, France (18-19.5.2017)</div>
             <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (31.5.2018)</div>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         </div>
 
         <div class="card2">
@@ -295,6 +303,7 @@
             <div class="talktitle">Amplify Your Impact with Ensemble (Mob) Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">UKStar, London, UK (27-28.2.2017)</div>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         </div>
 
         <div class="card2">
@@ -334,6 +343,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testival, Split, Croatia (19.9.2015)</div>
             <a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         </div>
 
         <div class="card2">
@@ -780,6 +790,47 @@
 
             <div class="card2">
                 <div class="timecircle">90 min</div>
+                <div class="talktitle">How Would You Test a Textbox?</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Craft Conference, Budapest, Hungary (8-11.5.2018)</div>
+                <div class="wherewhenwhere">European Testing Conference, Amsterdam, the Netherlands (19-20.2.2018)</div>
+                <div class="wherewhenwhere">Helsinki Software Testing -meetup Helsinki, Finland (12.9.2017)</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Ensemble (Mob) Programming</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Agile Greece Summit, September 19th 2019, Athens, Greece</div>
+                <div class="wherewhenwhere">Testing Cup, June 10th 2019, Poznan, Poland</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Ensemble (Mob) Security Testing</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">European Testing Conference, February 12th 2016, Bucharest, Romania</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Ensemble (Mob) Exploratory Testing Showdown: Testing Your Tool</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">Software Testing Finland Event, October 11th 2015, Jyväskylä, Finland</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
+                <div class="talktitle">Group Learning Unit Testing with Koans</div>
+                <div class="talktype">WORKSHOP</div>
+                <div class="wherewhenwhere">BTD Conference, May 20th 2015, Brussels, Belgium</div>
+            </div>
+
+            <div class="card2">
+                <div class="timecircle">90 min</div>
                 <div class="talktitle">Workshop on Sprint Test Planning</div>
                 <div class="talktype">WORKSHOP</div>
                 <div class="wherewhenwhere">maaretp Silver Jubilee (24.10.2022), Online</div>
@@ -811,6 +862,7 @@
                 <div class="talktitle">Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</div>
                 <div class="talktype">WORKSHOP</div>
                 <div class="wherewhenwhere">Selenium Conference India/Virtual (29-30.7.2022), Online</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
             </div>
 
             <div class="card2">
@@ -873,6 +925,7 @@
                 <div class="talktitle">Social Software Testing Approaches</div>
                 <div class="talktype">TUTORIAL</div>
                 <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
             </div>
 
             <div class="card2">
@@ -1010,6 +1063,7 @@
                 <div class="wherewhenwhere">Testing Portugal Conference 2017, Sofia, Bulgaria (27.11.2017)</div>
                 <div class="wherewhenwhere">Agile Testing Days 2017, Potsdam, Germany (13.11.2017)</div>
                 <div class="wherewhenwhere">SEETEST Conference 2017, Sofia, Bulgaria (27.9.2017)</div>
+                <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
             </div>
 
             <div class="card3">
@@ -1229,6 +1283,7 @@
         <div class="wherewhenwhere">Ministry of Testing public course, March 8th, 2016, Brighton, UK</div>
         <div class="wherewhenwhere">TestBash NY, November 5th 2015, New York, USA</div>
         <div class="wherewhenwhere">XP2015, May 25th 2015, Helsinki, Finland</div>
+        <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         <p>This course is no longer available.</p>
     </div>
 
