--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -110,8 +110,27 @@
             <div class="wherewhenwhere">TECH(K)NOW Day, March 8th 2022, Online</div>
             <div class="wherewhenwhere">Agile Greece Summit, September 20th 2019, Athens, Greece</div>
             <div class="wherewhenwhere">Conferencia Agile Testers - Brazilian Online Conference, October 28th 2018, Online</div>
-            <a href="https://www.slideshare.net/maaretp/ddd-europe-breaking-illusions-with-testing-keynote?qid=a798845b-91aa-419e-bac4-7facb4164f02&v=&b=&from_search=14"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.slideshare.net/maaretp/ddd-europe-breaking-illusions-with-testing-keynote"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=oQXbs3awemg"><i class="fas fa-video"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">15 min</div>
+            <div class="talktitle">Breaking Illusions with Exploratory Testing</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)</div>
+            <div class="wherewhenwhere">XP2015, Helsinki, Finland (28.5.2015)</div>
+            <a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Breaking Illusions about Testing - Testing Is Your Most Valuable Asset</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">BTD Conference, Brussels, Belgium (21.5.2015)</div>
+            <div class="wherewhenwhere">ScanAgile 2015, Helsinki, Finland (11.3.2015)</div>
+            <a href="http://www.slideshare.net/maaretp/btdconf-breaking-illusions-testing-is-your-most-valuable-asset"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=0NAB4nDOzl0"><i class="fas fa-video"></i></a>
         </div>
 
         <div class="card2">
@@ -452,6 +471,14 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Testing as Exploration and Delivering Continuously without Automation</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile San Diego meetup, San Diego, USA (2.4.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/agile-san-diego-testing-as-exploration-continuous-delivery-wo-automation"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">Exploring Realities of Testing - Theory to Practice</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">MoT Cork Meetup (18.11.2021), Online</div>
@@ -464,6 +491,14 @@
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Ohjelmistotestaus ry meetup (16.12.2021), Online</div>
         <a href="https://www.slideshare.net/maaretp/programming-assignments-in-tester-interviews"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">30 min</div>
+        <div class="talktitle">Experience report: Where is Test Strategy in an Agile Team</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">DEWT peer conference, Driebergen, the Netherlands (01/2015)</div>
+        <a href="http://www.slideshare.net/maaretp/dewt-where-is-test-strategy-with-an-agile-team"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -501,7 +536,20 @@
         <div class="timecircle">45 min</div>
         <div class="talktitle">Continuous Delivery without Automation</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">Agile Finland Continuous Deployment event, December 2nd 2014, Helsinki </div>
+        <div class="wherewhenwhere">Agile Finland Continuous Deployment event, December 2nd 2014, Helsinki</div>
+        <div class="wherewhenwhere">Ministry of Testing Masterclass webinar, Online (16.9.2015)</div>
+        <div class="wherewhenwhere">STPConference, San Diego, USA (1.4.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/experimenting-in-context-for-exploratory-testing"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">From Lean Startup to Intrapreneurial Testing</div>
+        <div class="talktype">KEYNOTE</div>
+        <div class="wherewhenwhere">TinyTestBash 2015, Brighton, UK (23.10.2015)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">FISBT Testing Assembly 2015, Helsinki, Finland (23.9.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/lean-startup-and-intrapreneurial-testing"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -543,7 +591,15 @@
         <div class="timecircle">45 min</div>
         <div class="talktitle">Non-Coding Activities a Development Team Needs</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">Agile Finland, January 15th 2014, Oulu, Finland </div>
+        <div class="wherewhenwhere">Agile Finland, January 15th 2014, Oulu, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Pairing is Sharing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Tampere Goes Agile 2015, Tampere, Finland (17.10.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/pairing-is-sharing"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -551,6 +607,7 @@
         <div class="talktitle">Serendipity and Perseverance: Injecting Testing in a Test-Resistant Team</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Wildcard Conference, September 13th 2013, Riga, Latvia</div>
+        <div class="wherewhenwhere">XP2015 (short version), Helsinki, Finland (27.5.2015)</div>
     </div>
 
     <div class="card2">
@@ -638,6 +695,27 @@
         <div class="talktitle">Testauksen kustannukset ja haasteet (Testing Costs and Challenges)</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Testauksen Uusi Aika -seminaari, Autumn 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Sustainability. The Fine Line between Work and Hobbies</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Helsinki Charity Forum meetup (30.10.2015)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Experiences of a tester in the Industry, Experience through Ensemble (Mob) Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">15 min</div>
+        <div class="talktitle">My New Lessons on Unit Testing - Asserts Can Be Different</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Tech Excellence Finland Meetup, Jyväskylä, Finland (11.10.2015)</div>
     </div>
 
     <div class="card2">
